# multimodal_recommendation_system

./: README.md  app.py  config.yaml  pyproject.toml
src/: config.py  data_handler.py  distance.py  embed_catalogue.py  embedder.py  image_captioning.py  recommendation.py  summarise.py
